Add merchant atribute address